rule-of-three: Allow empty user dtors, for the sake of less noise

If:
- No user copy ctor
- No user copy-assign operator
- User dtor but empty

then we don't warn. Although it violates the rule of the big three it's harmless.

BUG: 358519